v1.16 (PRERELEASE)

Extension

edit-server.el

v1.15

Extension

* Now builds for Firefox using WebExtension hooks
* Use chrome.notifications instead of webkitNotifications
* Use <div> with style instead of inline <img> for edit button
* fake "input" event to stop active page components overwriting text area

edit-server.el

* avoid calling make-frame-on-display for TTY setups (#103/#132/#133)
* restore edit-server-default-major-mode if auto-mode lookup fails
* delete window when done editing with no new frame

v1.14

Extension

* Fix a bug with the context menu (#85)
* Make text buttons slightly opaque

edit-server.el

* add edit-server-edit-mode-hook (#91, #94)

v1.13

Extension

* Change the handling of hidden elements (fix bug #78)
* Add debugging for erroneous hidden text areas (#93)
* Add keyboard shortcut to bring Emacs to foreground
* Pass clipboard contents to foreground request

edit-server.el

* add advice to save-buffers-kill-emacs to avoid prompting on shutdown
* add autoload cookies
* fix bug with format chars in url (#80)
* don't call kill buffer hooks twice (#92)
* don't set-buffer-multibyte on process buffer
* support the "foreground" request with optional clipboard contents

v1.12

Extension

* Upgraded manifest to version 2 for future releases of Chrome
* Added an "Enable Debug" flag to control logging to console
* Use Mutation Observers to better track changes in dynamic DOMs
* Fake a keypress when updating the textarea
* Bug fix for handling editable DIV elements

edit-server.el

* Now available from the MELPA package archive!
* Beta support for iterative C-x C-s saving (it works but is ugly, see kill-ring)
* Default to using UTF-8 coding for process communication
* Raise existing frame consistently on Mac
* Tweak the portion of the URL used to name buffers

v1.11

Extension

* Fixed some breakage to the "edit focused area" feature
* Fixed broken link to embedded edit-server

edit-server.el

* A couple of fixes for Emacs 24 compatibility